epititle link config

--- a/terminaide/templates/index.html
+++ b/terminaide/templates/index.html
@@ -423,7 +423,13 @@
         </div>
 
         {% if epititle %}
-        <div class="epititle">{{ epititle }}</div>
+        <div class="epititle">
+            {% if epititle_url %}
+            <a href="{{ epititle_url }}" target="_blank">{{ epititle }}</a>
+            {% else %}
+            {{ epititle }}
+            {% endif %}
+        </div>
         {% endif %}
     </div>
 
@@ -514,7 +520,8 @@
                 makeUrlsClickable(subtitle);
             }
             
-            if (epititle) {
+            if (epititle && !epititle.querySelector('a')) {
+                // Only make URLs clickable if there isn't already a link
                 makeUrlsClickable(epititle);
             }
             
